--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
-@import "./sass/vendors/bootstrap.scss";
+@import "./sass/vendors/bootstrap";
+//@import "./sass/vendors/bootstrap.scss";
 
 @import "./sass/abstracts/mixins";
 @import "./sass/abstracts/variables";
