--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,7 +52,7 @@ body {
 }
 
 h1, h2, p {
-  margin: ;
+  margin: 0;
 }
 
 ul {
@@ -475,7 +475,7 @@ img {
   color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
-  padding: 2rem 0;
+  padding: 7rem 0;
 }
 
 .footer__title {
