--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,9 +67,18 @@ a {
 }
 
 img {
-  max-width: 100%;
-  height: auto;
   display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+th, td {
+  border: 1px solid black;
+  padding: 6px
 }
 
 /*===== CLASS CSS ===== */
