--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -197,6 +197,33 @@ th, td {
   right: 0;
 }
 
+/* (A) CONTAINER */
+.collapse, .collapse ul {
+  list-style-type: none;
+  padding-left: 10px;
+}
+
+/* (B) LIST ITEMS */
+.collapse li { padding: 10px; }
+
+/* (C) TOGGLE */
+.toggle {
+  padding: 10px;
+  cursor: pointer;
+}
+.toggle::before {
+  display: inline-block;
+  width: 15px;
+  content: "+";
+}
+.toggle.show::before { content: "-"; }
+
+/* (D) SHOW/HIDE */
+.collapse ol { display: none; }
+.toggle.show + ol { display: block; }
+
+
+
 .notes_container {
   display: flex;
   flex-direction: column;
