--- a/thenLCARS/assets/lcars-ultra-classic.css
+++ b/thenLCARS/assets/lcars-ultra-classic.css
@@ -793,6 +793,26 @@ a:active {
 	}
 }
 
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0.5em;
+  }
+  
+  ul ul {
+	margin-left: 2em;
+  }
+  
+  li {
+	margin: 0;
+	padding: 0;
+  }
+  
+  li:before {
+	content: "\2022";
+	margin-right: 0.5em;
+  }
+
 .banner	{
 	padding-bottom: 25px;
 	padding-left: 5px;
@@ -1246,6 +1266,7 @@ nav a:hover {
 .panel-6,
 .panel-7,
 .panel-8	{
+	font-size: 1.2em;
 	padding-right: 10px;
 	border-bottom: 5px solid #000;
 }
